fix[class]: fix table Name in GetClassBySemesterAndYear
