# docs/swagger.yaml
@@ -408,9 +408,14 @@ paths:
       - application/json
       description: get class search by semester
       parameters:
-      - description: 1, 2, ...
+      - description: 1, 2, 3, ...
         in: query
         name: semester
+        required: true
+        type: string
+      - description: '..., 2021, 2022, 2023, ...'
+        in: query
+        name: year
         required: true
         type: string
       produces:
